--- a/priv/templates/boot_win.eex
+++ b/priv/templates/boot_win.eex
@@ -114,7 +114,7 @@
 @if %taskname%=="rpc" @goto rpc
 @if %taskname%=="rpcterms" @goto rpcterms
 @if %taskname%=="eval" @goto eval
-@if %taskname%=="command" @goto command
+@if %taskname%=="command" call :command %*
 @if %taskname%=="describe" @goto describe
 @if %taskname%=="" @goto usage
 @if exist "%command_dir%\%taskname%.bat" (
@@ -436,15 +436,21 @@ if exists "%rel_dir%\vm.args.bak" do (
 
 :: Execute a command in a clean Erlang VM
 :command
-@for /f "tokens=1-2*" %%a in ("%args%") do (
-  @set module=%%a
-  @set function=%%b
-  @set command_args=%%c
-)
-@%erl% -boot_var ERTS_LIB_DIR "%erts_dir%\..\lib" ^
+rem @for /f "tokens=1-2*" %%a in ("%args%") do (
+rem @set module=%%a
+rem @set function=%%b
+rem @set command_args=%%c
+rem )
+shift
+
+set module=%1
+set function=%2
+set command_args=%3
+
+%erl% -boot_var ERTS_LIB_DIR "%erts_dir%\..\lib" ^
        -hidden -noshell -boot start_clean ^
        -pa "%consolidated_dir%" ^
-       -s %module% %function% -s init stop
+       -s %module% %function% -s init stop ^
        -extra %command_args%
 @goto :eof
 
