Boot script improvements
- Support OTP 20's signal handling
- Break up monolithic boot script into smaller components for easier
maintenance
- A variety of code style improvements
- More documentation

This was primarily inspired by the need to support the new signal
handling in OTP 20, but in general the boot script was getting pretty
ungainly in it's old form. Breaking individual commands out into their
own scripts forces us to dogfood the custom command infrastructure (for
the most part), and makes working on individual commands a lot easier.
It also drove some improvements inspired from other shell-heavy
projects.

--- a/priv/templates/boot_loader.eex
+++ b/priv/templates/boot_loader.eex
@@ -1,4 +1,4 @@
-#!/bin/sh
+#!/bin/bash --posix
 set -e
 
 unset CDPATH
@@ -7,11 +7,35 @@ SCRIPT_DIR="$(cd "$(dirname "$0")" && pwd -P)"
 RELEASE_ROOT_DIR="$(cd "$SCRIPT_DIR/.." && pwd)"
 RELEASES_DIR="$RELEASE_ROOT_DIR/releases"
 REL_NAME="${REL_NAME:-<%= release_name %>}"
-REL_VSN="${REL_VSN:-$(cat "$RELEASES_DIR"/start_erl.data | cut -d' ' -f2)}"
-ERTS_VSN="${ERTS_VSN:-$(cat "$RELEASES_DIR"/start_erl.data | cut -d' ' -f1)}"
+REL_VSN="${REL_VSN:-$(cut -d' ' -f2 "$RELEASES_DIR"/start_erl.data)}"
+ERTS_VSN="${ERTS_VSN:-$(cut -d' ' -f1 "$RELEASES_DIR"/start_erl.data)}"
 
+# Set DEBUG_BOOT to output verbose debugging info during execution
+if [ ! -z "$DEBUG_BOOT" ]; then
+    set -x
+fi
+
+# If TERM is not set, set it to xterm
+if [ -z "$TERM" ]; then
+    export TERM=xterm
+fi
+
+# Include helpers, if the current release version supports it
+if [ -d "$RELEASES_DIR/$REL_VSN/libexec" ]; then
+    # shellcheck source=../libexec/logger.sh
+    . "$RELEASES_DIR/$REL_VSN/libexec/logger.sh"
+    # shellcheck source=../libexec/erts.sh
+    . "$RELEASES_DIR/$REL_VSN/libexec/erts.sh"
+    OTP_VER="$(otp_vsn)"
+else
+    # For backwards compatibility, do not perform the OTP check
+    # If the active release version was built with an older Distillery
+    OTP_VER="0"
+fi
+export OTP_VER
+
+# Handles graceful shutdown in OTP <20
 __pid=""
-
 _cleanup() {
     trap - HUP INT TERM QUIT EXIT USR1 USR2
     set +e
@@ -23,17 +47,23 @@ _cleanup() {
     fi
 }
 
-case "$1" in
-    foreground)
-        trap '_cleanup' HUP INT TERM QUIT EXIT USR1 USR2
+if [ "$OTP_VER" -ge 20 ]; then
+    # Use OTP break handler
+    exec "$RELEASES_DIR/$REL_VSN/$REL_NAME.sh" "$@"
+else
+    # Use our own break handling
+    case "$1" in
+        foreground)
+            trap '_cleanup' HUP INT TERM QUIT EXIT USR1 USR2
 
-        "$RELEASES_DIR/$REL_VSN/$REL_NAME.sh" "$@" &
-        __pid=$!
+            "$RELEASES_DIR/$REL_VSN/$REL_NAME.sh" "$@" &
+            __pid=$!
 
-        wait $__pid
-        exit $?
-        ;;
-    *)
-        exec "$RELEASES_DIR/$REL_VSN/$REL_NAME.sh" "$@"
-        ;;
-esac
+            wait $__pid
+            exit $?
+            ;;
+        *)
+            exec "$RELEASES_DIR/$REL_VSN/$REL_NAME.sh" "$@"
+            ;;
+    esac
+fi
