Add note about dev mode and Phoenix to initial config

--- a/priv/templates/example_config.eex
+++ b/priv/templates/example_config.eex
@@ -22,6 +22,12 @@ use Mix.Releases.Config,
 # and environment configuration is called a profile
 <% end %>
 environment :dev do
+  # If you are running Phoenix, you should make sure that
+  # server: true is set and the code reloader is disabled,
+  # even in dev mode.
+  # It is recommended that you build with MIX_ENV=prod and pass
+  # the --env flag to Distillery explicitly if you want to use
+  # dev mode.
   set dev_mode: true
   set include_erts: false
   set cookie: <%= inspect(get_cookie.()) %>
