Ensure environment variables are exported as necessary

--- a/priv/templates/boot.eex
+++ b/priv/templates/boot.eex
@@ -1,7 +1,6 @@
 #!/usr/bin/env bash
 
 set -o posix
-
 set -e
 
 # Set DEBUG_BOOT to output verbose debugging info during execution
@@ -20,6 +19,11 @@ RUN_ERL_ENV="${RUN_ERL_ENV:-<%= release.profile.run_erl_env %>}"
 # Current version of ERTS being used
 # If this is not present/unset, it will be detected
 <%= if ((is_binary(include_erts) or include_erts) and not is_nil(erts_vsn)) do %>ERTS_VSN="${ERTS_VSN:-<%= erts_vsn %>}"<% end %>
+export REL_NAME
+export REL_VSN
+export ERL_OPTS
+export RUN_ERL_ENV
+export ERTS_VSN
 
 # If readlink has no -f option, or greadlink is not available,
 # This function behaves like `readlink -f`
