--- a/priv/templates/boot_loader.eex
+++ b/priv/templates/boot_loader.eex
@@ -12,6 +12,13 @@ REL_NAME="${REL_NAME:-<%= release_name %>}"
 REL_VSN="${REL_VSN:-$(cut -d' ' -f2 "$RELEASES_DIR"/start_erl.data)}"
 ERTS_VSN="${ERTS_VSN:-$(cut -d' ' -f1 "$RELEASES_DIR"/start_erl.data)}"
 
+export RELEASE_ROOT_DIR
+export RELEASES_DIR
+export REL_NAME
+export REL_VSN
+export ERTS_VSN
+export DEBUG_BOOT
+
 # Set DEBUG_BOOT to output verbose debugging info during execution
 if [ ! -z "$DEBUG_BOOT" ]; then
     set -x
