--- a/priv/templates/boot_win.eex
+++ b/priv/templates/boot_win.eex
@@ -465,8 +465,8 @@ goto :eof
 call :ping>NUL
 if %ERRORLEVEL% GEQ 1 exit %ERRORLEVEL%
 setlocal EnableDelayedExpansion
-set get_pid_cmd=%escript% %nodetool% eval %node_type% %node_name% -setcookie "!cookie!" "erlang:list_to_integer(os:getpid()).'
-for /f "delims=" %%i in (`%%get_pid_cmd%%`) do set pid=%%i
+set get_pid_cmd=%escript% %nodetool% eval %node_type% %node_name% -setcookie "!cookie!" "erlang:list_to_integer(os:getpid())."
+for /f "delims=" %%i in ('%%get_pid_cmd%%') do set pid=%%i
 endlocal
 goto :eof
 
