--- a/priv/templates/boot_win.eex
+++ b/priv/templates/boot_win.eex
@@ -466,7 +466,7 @@ call :ping>NUL
 if %ERRORLEVEL% GEQ 1 exit %ERRORLEVEL%
 setlocal EnableDelayedExpansion
 set get_pid_cmd=%escript% %nodetool% eval %node_type% %node_name% -setcookie "!cookie!" "erlang:list_to_integer(os:getpid())."
-for /f "delims=" %%i in (`%%get_pid_cmd%%`) do set pid=%%i
+for /f "usebackq delims=" %%i in (`%%get_pid_cmd%%`) do set pid=%%i
 endlocal
 goto :eof
 
