Adds commands to init task:
- Add init tests
- Update example config template
- Add ability to add custom commands to the template
- Add --command switch to init task, This allows us to initialize a release config with custom commands.

--- a/priv/templates/example_config.eex
+++ b/priv/templates/example_config.eex
@@ -57,6 +57,11 @@ release :<%= Keyword.get(release, :release_name) %> do
   set version: current_version(:<%= Keyword.get(release, :release_name)%>)
   set applications: [
     :runtime_tools
-  ]
+  ]<%= if commands && commands != [] do %>
+  set commands: [
+<%= Enum.map(commands, fn({command, path}) ->
+"    #{command}: \"#{path}\""
+  end) |> Enum.join(",\n") %>
+  ]<% end %>
 end<% end %>
 <% end %>
