Set name of process to the script path
This addresses the situation where looking for the running release in
the output of `ps ax` shows the path to `beam.smp` with a bunch of
arguments, rather than the path of the release script which is being
executed. If you have multiple releases running, the former is very
difficult to read and find the pid of a given release process, with this
change it is now just a matter of finding the process with the path you
care about.

--- a/priv/templates/boot.eex
+++ b/priv/templates/boot.eex
@@ -59,6 +59,9 @@ else
     SCRIPT="${SCRIPT:-$(readlink -f "$0" )}"
 fi
 
+export ESCRIPT_NAME
+ESCRIPT_NAME="${ESCRIPT_NAME:-$SCRIPT}"
+
 # Parent directory of this script
 SCRIPT_DIR="$(dirname "${SCRIPT}")"
 # Root directory of all releases
