--- a/priv/templates/boot_loader.eex
+++ b/priv/templates/boot_loader.eex
@@ -11,12 +11,14 @@ RELEASES_DIR="$RELEASE_ROOT_DIR/releases"
 REL_NAME="${REL_NAME:-<%= release_name %>}"
 REL_VSN="${REL_VSN:-$(cut -d' ' -f2 "$RELEASES_DIR"/start_erl.data)}"
 ERTS_VSN="${ERTS_VSN:-$(cut -d' ' -f1 "$RELEASES_DIR"/start_erl.data)}"
+<%= if (not include_erts or is_nil(erts_vsn)) do %>USE_HOST_ERTS=true<% end %>
 
 export RELEASE_ROOT_DIR
 export RELEASES_DIR
 export REL_NAME
 export REL_VSN
 export ERTS_VSN
+export USE_HOST_ERTS
 export DEBUG_BOOT
 
 # Set DEBUG_BOOT to output verbose debugging info during execution
