[runtime] replace release_utils/nodetool escripts with new CLI tooling

--- a/priv/templates/release_rc_entry.eex
+++ b/priv/templates/release_rc_entry.eex
@@ -33,5 +33,5 @@ if ! command -v bash >/dev/null ; then
     printf "${bldred}%s${txtrst}\n" "$message"
     exit 1
 else
-    exec "${SCRIPT_DIR}/${REL_NAME}_loader.sh" "$@"
+    exec "${SCRIPT_DIR}/${REL_NAME}_rc_exec.sh" "$@"
 fi
