--- a/priv/templates/executable_header.eex
+++ b/priv/templates/executable_header.eex
@@ -6,7 +6,11 @@ __EXEC_REL_NAME="<%= release_name %>"
 # Determines if this script should clean up after execution
 __EXEC_CLEANUP_AFTER="<%= exec_options.transient %>"
 # The directory to which the release contents will be extracted
-__EXEC_TARGET_DIR="./tmp"
+if [ -z "$RELEASE_MUTABLE_DIR" ]; then
+    __EXEC_TARGET_DIR="./tmp"
+else
+    __EXEC_TARGET_DIR="$RELEASE_MUTABLE_DIR/tmp"
+fi
 
 mkdir -p "$__EXEC_TARGET_DIR"
 
